Fix AVPlayerController leak on pages with video https://bugs.webkit.org/show_bug.cgi?id=131878

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-04-19
Reviewed by Eric Carlson.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(-[WebAVPlayerController init]):
Assigning to the retain property will increment the count,
so balance the alloc with an autorelease.

Canonical link: https://commits.webkit.org/149971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167551 268f45cc-cd09-0410-ab3c-d52691b4dbfc